@@ -1,3 +1,13 @@
+2021-06-24  Venky Dass  <yaranamavenkataramana@apple.com>
+
+        Crash in WebFrameLoaderClient::dispatchDidStartProvisionalLoad after provisionalLoader is gone. 
+        https://bugs.webkit.org/show_bug.cgi?id=226979
+
+        Reviewed by Ryosuke Niwa.
+
+        * WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
+        (WebKit::WebFrameLoaderClient::dispatchDidStartProvisionalLoad):
+
 2021-06-24  Said Abou-Hallawa  <said@apple.com>
 
         [GPU Process] RELEASE_ASSERT in RemoteResourceCacheProxy::didFinalizeRenderingUpdate() may fire if GPUP is relaunched
